src/test/ui/parser/recover-struct.stderr
error: expected `:`, found `Bad`
  --> $DIR/recover-struct.rs:16:9
   |
LL |         Very
   |             - expected `:`
LL |         Bad //~ ERROR found `Bad`
   |         ^^^ unexpected token

error: aborting due to previous error

